Revert "Fix double scroll bar right"
This reverts commit ee150e4ca8d4ee656a94cbb22f1c44ba2f580332.

--- a/src/client/sass/partials/_code.scss
+++ b/src/client/sass/partials/_code.scss
@@ -20,12 +20,11 @@
 .Snippet-code {
   background: #2b303b;
   border: 1px solid #181a1f;
-  overflow: hidden;
+  overflow: auto;
 
   .hljs {
     display: block;
-    overflow-y: hidden;
-    overflow-x: visible;
+    overflow: visible;
     font-family: 'Inconsolata', monospace;
     font-size: 15px;
     line-height: 20px;
